# kaede

./: Cargo.toml  PKGBUILD  README.md  build.sh  com.kaede.gpu-manager.desktop  default.nix
src/: main.rs  updates.rs
src/config/: mod.rs
src/desktop/: mod.rs
src/gpu/: mod.rs
src/heroic/: mod.rs
src/launcher/: mod.rs
src/logger/: mod.rs
src/models/: mod.rs
src/nvidia/: mod.rs
src/steam/: mod.rs
src/ui/: about.rs  app_list.rs  details.rs  mod.rs  settings.rs  util.rs
